data/all_generated_tests/raw_wast_tests/br_TypeMismatchinControlFlowInstructions_1114.wast
;; 5. **Test Description:**    - Design a `block` that should push two `i32` values on the stack upon completion.    - Inside this block, use both a `br_if` (with a condition resulting in false) and a `br` that incorrectly only places one `i32` on the stack.    - Checks whether the `br` instruction upholds the multiple result type requirements properly.

(assert_invalid
  (module
    (func $br_multiple_result_type_mismatch
      (block (result i32 i32)
        (i32.const 1)
        (i32.const 2)
        (br_if 0 (i32.const 0))
        (br 0 (i32.const 3))
      )
    )
  )
  "type mismatch"
)